--- a/about-us.html
+++ b/about-us.html
@@ -66,11 +66,11 @@
     <section class="cabecera-verde">
         <div class="container">
             <div class="row vertical-centered-text">
-                <div class="col-sm-8">
+                <div class="col-xs-8">
                     <h2>About Us</h2>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
-                <div class="col-sm-4 text-right">
+                <div class="col-xs-4 text-right">
                     <a href="index.html"><strong>Home</strong></a> | About Us
                 </div>
             </div>
@@ -122,8 +122,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sit amet, consectetur adipisicing elit  consectetur adipisicing elit. <p>
                 </div>
             </div>
-            <div class="row text-center mt-2">
-                <div class="col-sm-3">
+            <div class="row text-center">
+                <div class="col-sm-3 col-xs-6 mt-2">
                     <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
                     <p>David J. Robbins</p>
                     <h6>Senior Vice President</h6>
@@ -149,7 +149,7 @@
                         </div>
                     </a>                    
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-6 mt-2">
                     <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
                     <p>David J. Robbins</p>
                     <h6>Senior Vice President</h6>
@@ -175,7 +175,7 @@
                         </div>
                     </a>                    
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-6  mt-2">
                     <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
                     <p>David J. Robbins</p>
                     <h6>Senior Vice President</h6>
@@ -201,7 +201,7 @@
                         </div>
                     </a>                    
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-xs-6  mt-2">
                     <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
                     <p>David J. Robbins</p>
                     <h6>Senior Vice President</h6>
@@ -233,134 +233,134 @@
     </section>
 
     <div class="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <h3>About Us</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
-        </div>
-        <div class="col-md-3 fila">
-            <h3>Company</h3>
-            <a href="">
-                <i class="fa fa-angle-right"></i>
-                <span>The company</span>
-            </a>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h3>About Us</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
+    </div>
+    <div class="col-md-3 fila">
+        <h3>Company</h3>
+        <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>The company</span>
+        </a>
 
-            <a href="">
-                <i class="fa fa-angle-right"></i>
-                <span>Our Team</span>
-            </a>
+        <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Our Team</span>
+        </a>
 
-            <a href="">
-                <i class="fa fa-angle-right"></i>
-                <span>Our Partners</span>
-            </a>
+        <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Our Partners</span>
+        </a>
 
-            <a href="">
-                <i class="fa fa-angle-right"></i>
-                <span>Our Services</span>
-            </a>
+        <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Our Services</span>
+        </a>
 
-            <a href="">
-                <i class="fa fa-angle-right"></i>
-                <span>Faq</span>
-            </a>
+        <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Faq</span>
+        </a>
 
-            <a href="">
-                <i class="fa fa-angle-right"></i>
-                <span>Contact Us</span>
-            </a>
+        <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Contact Us</span>
+        </a>
 
-            <a href="">
-                <i class="fa fa-angle-right"></i>
-                <span>Privacy Policy</span>
-            </a>
+        <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Privacy Policy</span>
+        </a>
 
-            <a href="">
-                <i class="fa fa-angle-right"></i>
-                <span>Terms of Use</span>
-            </a>
+        <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Terms of Use</span>
+        </a>
 
-            <a href="">
-                <i class="fa fa-angle-right"></i>
-                <span>Copyright</span>
-            </a>
-        </div>
+        <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Copyright</span>
+        </a>
+    </div>
 
-        <div class="col-md-3">
-            <h3>Latest Blog</h3>
-            <div class="row foto">
-                <div class="col-md-4">
-                    <a href="#">
-                        <img class="media-objet" src="images/blog/thumb1.jpg">
-                    </a>  
-                </div>
-                <div class="col-md-8">
-                    <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
-                    <h6>Posted 17 Aug 2013</h6>
-                </div>
+    <div class="col-md-3 col-xs-12">
+        <h3>Latest Blog</h3>
+        <div class="row foto">
+            <div class="col-md-4 col-xs-2">
+                <a href="#">
+                    <img class="media-objet img-full" src="images/blog/thumb1.jpg">
+                </a>  
             </div>
-
-            <div class="row foto">
-                <div class="col-md-4">
-                    <a href="#">
-                        <img class="media-objet" src="images/blog/thumb2.jpg">
-                    </a>  
-                </div>
-                <div class="col-md-8">
-                    <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
-                    <h6>Posted 13 Sep 2013</h6>
-                </div>
-            </div>
-
-            <div class="row foto">
-                <div class="col-md-4">
-                    <a href="#">
-                        <img class="media-objet" src="images/blog/thumb3.jpg">
-                    </a>  
-                </div>
-                <div class="col-md-8">
-                    <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
-                    <h6>Posted 11 Jul 2013</h6>
-                </div>
+            <div class="col-md-8 col-xs-10">
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 17 Aug 2013</h6>
             </div>
         </div>
 
-        <div class="col-md-3">
-            <h3>Address</h3>
-            <br>
-            <h5>Twitter, Inc</h5>
-            <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
-            <div class="go">
-                <h3>Newsletter</h3>
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Enter your email">
-                    <span class="input-group-btn">
-                        <button class="btn btn-danger" type="button">Go!</button>
-                    </span>
-                </div>
+        <div class="row foto">
+            <div class="col-md-4 col-xs-2">
+                <a href="#">
+                    <img class="media-objet img-full" src="images/blog/thumb2.jpg">
+                </a>  
+            </div>
+            <div class="col-md-8 col-xs-10">
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 13 Sep 2013</h6>
+            </div>
+        </div>
+
+        <div class="row foto">
+            <div class="col-md-4 col-xs-2">
+                <a href="#">
+                    <img class="media-objet img-full" src="images/blog/thumb3.jpg">
+                </a>  
+            </div>
+            <div class="col-md-8 col-xs-10">
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 11 Jul 2013</h6>
             </div>
         </div>
     </div>
+
+    <div class="col-md-3">
+        <h3>Address</h3>
+        <br>
+        <h5>Twitter, Inc</h5>
+        <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+        <div class="go">
+            <h3>Newsletter</h3>
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Enter your email">
+                <span class="input-group-btn">
+                    <button class="btn btn-danger" type="button">Go!</button>
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 </div>
 
 <footer>
     <div class="container">
         <div class="row vertical-centered-text ">
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12">
                 <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
             </div>
-            <div class="col-md-6 footer-nav">
+            <div class="col-md-6 col-xs-12 footer-nav">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Home</a>
+                        <a class="page-scroll" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">About Us</a>
+                        <a class="page-scroll" href="about-us.html">About Us</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Contact Us</a>
+                        <a class="page-scroll" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
