--- a/blog-item.html
+++ b/blog-item.html
@@ -66,11 +66,11 @@
     <section class="cabecera-verde">
         <div class="container">
             <div class="row vertical-centered-text">
-                <div class="col-sm-8">
+                <div class="col-xs-8">
                     <h2>Blog</h2>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
-                <div class="col-sm-4 text-right">
+                <div class="col-xs-4 text-right">
                     <a href="index.html"><strong>Home</strong></a> | Blog
                 </div>
             </div>
@@ -79,7 +79,71 @@
     <section class="content">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-4 col-sm-push-8">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button"><i class="fa fa-search"></i></button>
+                                </span>
+                            </div><!-- /input-group -->
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-xs-6">
+                            <img class="img-rounded img-full" src="images/ads/ad1.png" alt="">
+                        </div>
+                        <div class="col-xs-6">
+                            <img class="img-rounded img-full" src="images/ads/ad2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-xs-6">
+                            <img class="img-rounded img-full" src="images/ads/ad3.png" alt="">
+                        </div>
+                        <div class="col-xs-6">
+                            <img class="img-rounded img-full" src="images/ads/ad4.png" alt="">
+                        </div>
+                    </div>
+                    <h3>Blog Categories</h3>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <ul>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Development</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <ul>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Joomla</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Wordpress</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Drupal</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Magento</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Bootstrap</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Tag Cloud</h3>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <span class="label label-primary">CSS3</span>
+                            <span class="label label-primary">HTML5</span>
+                            <span class="label label-primary">WordPress</span>
+                            <span class="label label-primary">Joomla</span>
+                            <span class="label label-primary">Drupal</span>
+                            <span class="label label-primary">Bootstrap</span>
+                            <span class="label label-primary">JQuery</span>
+                            <span class="label label-primary">Tutorial</span>
+                            <span class="label label-primary">UpDate</span>
+                        </div>
+                    </div>
+                    <h3>Facebook fanpage</h3>
+                </div>
+                <div class="col-sm-8 col-sm-pull-4">
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="box-white mt-2">
@@ -170,10 +234,10 @@
                                     </div>
                                     <h3>Leave a comment</h3>
                                     <div class="row">
-                                        <div class="col-xs-6">
+                                        <div class="col-sm-6 col-xs-12 mt-2">
                                             <input type="text" class="form-control" placeholder="Name">
                                         </div>
-                                        <div class="col-xs-6">
+                                        <div class="col-sm-6 col-xs-12 mt-2">
                                             <input type="text" class="form-control" placeholder="Email">
                                         </div>
                                     </div>
@@ -188,209 +252,146 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-danger" type="button"><i class="fa fa-search"></i></button>
-                                </span>
-                            </div><!-- /input-group -->
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col-sm-6">
-                            <img class="img-rounded" src="images/ads/ad1.png" alt="">
-                        </div>
-                        <div class="col-sm-6">
-                            <img class="img-rounded" src="images/ads/ad2.png" alt="">
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col-sm-6">
-                            <img class="img-rounded" src="images/ads/ad3.png" alt="">
-                        </div>
-                        <div class="col-sm-6">
-                            <img class="img-rounded" src="images/ads/ad4.png" alt="">
-                        </div>
-                    </div>
-                    <h3>Blog Categories</h3>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <ul>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Development</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-6">
-                            <ul>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Joomla</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Wordpress</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Drupal</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Magento</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Bootstrap</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <h3>Tag Cloud</h3>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <span class="label label-primary">CSS3</span>
-                            <span class="label label-primary">HTML5</span>
-                            <span class="label label-primary">WordPress</span>
-                            <span class="label label-primary">Joomla</span>
-                            <span class="label label-primary">Drupal</span>
-                            <span class="label label-primary">Bootstrap</span>
-                            <span class="label label-primary">JQuery</span>
-                            <span class="label label-primary">Tutorial</span>
-                            <span class="label label-primary">UpDate</span>
-                        </div>
-                    </div>
-                    <h3>Facebook fanpage</h3>
-                </div>
+                
             </div>
         </div>
     </section>
 
-    <div class="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <h3>About Us</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
-          </div>
-          <div class="col-md-3 fila">
-            <h3>Company</h3>
-            <a href="">
+<div class="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h3>About Us</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
+    </div>
+    <div class="col-md-3 fila">
+        <h3>Company</h3>
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>The company</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Our Team</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Our Partners</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Our Services</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Faq</span>
-            </a>
+        </a>
 
-             <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Contact Us</span>
-            </a>
+        </a>
 
-             <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Privacy Policy</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Terms of Use</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Copyright</span>
-            </a>
-          </div>
+        </a>
+    </div>
 
-          <div class="col-md-3">
-            <h3>Latest Blog</h3>
-            <div class="row foto">
-            <div class="col-md-4">
-            <a href="#">
-            <img class="media-objet" src="images/blog/thumb1.jpg">
-            </a>  
+    <div class="col-md-3 col-xs-12">
+        <h3>Latest Blog</h3>
+        <div class="row foto">
+            <div class="col-md-4 col-xs-2">
+                <a href="#">
+                    <img class="media-objet img-full" src="images/blog/thumb1.jpg">
+                </a>  
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-10">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 17 Aug 2013</h6>
             </div>
-            </div>
+        </div>
 
-            <div class="row foto">
-            <div class="col-md-4">
-            <a href="#">
-            <img class="media-objet" src="images/blog/thumb2.jpg">
-            </a>  
+        <div class="row foto">
+            <div class="col-md-4 col-xs-2">
+                <a href="#">
+                    <img class="media-objet img-full" src="images/blog/thumb2.jpg">
+                </a>  
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-10">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 13 Sep 2013</h6>
             </div>
-            </div>
+        </div>
 
-            <div class="row foto">
-            <div class="col-md-4">
-            <a href="#">
-            <img class="media-objet" src="images/blog/thumb3.jpg">
-            </a>  
+        <div class="row foto">
+            <div class="col-md-4 col-xs-2">
+                <a href="#">
+                    <img class="media-objet img-full" src="images/blog/thumb3.jpg">
+                </a>  
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-10">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 11 Jul 2013</h6>
             </div>
-            </div>
-        </div>
-
-          <div class="col-md-3">
-            <h3>Address</h3>
-            <br>
-            <h5>Twitter, Inc</h5>
-            <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
-            <div class="go">
-                <h3>Newsletter</h3>
-            <div class="input-group">
-            <input type="text" class="form-control" placeholder="Enter your email">
-            <span class="input-group-btn">
-            <button class="btn btn-danger" type="button">Go!</button>
-            </span>
-            </div>
-            </div>
-        </div>
-        </div>
         </div>
     </div>
 
-    <footer>
-        <div class="container">
-            <div class="row vertical-centered-text ">
-                <div class="col-md-6">
-                    <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
-                </div>
-                <div class="col-md-6 footer-nav">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a class="page-scroll" href="#about">Home</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="#services">About Us</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="#portfolio">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
+    <div class="col-md-3">
+        <h3>Address</h3>
+        <br>
+        <h5>Twitter, Inc</h5>
+        <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+        <div class="go">
+            <h3>Newsletter</h3>
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Enter your email">
+                <span class="input-group-btn">
+                    <button class="btn btn-danger" type="button">Go!</button>
+                </span>
             </div>
         </div>
-    </footer>
+    </div>
+</div>
+</div>
+</div>
+
+<footer>
+    <div class="container">
+        <div class="row vertical-centered-text ">
+            <div class="col-md-6 col-xs-12">
+                <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
+            </div>
+            <div class="col-md-6 col-xs-12 footer-nav">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="about-us.html">About Us</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
