--- a/blog.html
+++ b/blog.html
@@ -67,11 +67,11 @@
     <section class="cabecera-verde">
         <div class="container">
             <div class="row vertical-centered-text">
-                <div class="col-sm-8">
+                <div class="col-xs-8">
                     <h2>Blog</h2>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
-                <div class="col-sm-4 text-right">
+                <div class="col-xs-4 text-right">
                     <a href="index.html"><strong>Home</strong></a> | Blog
                 </div>
             </div>
@@ -80,37 +80,7 @@
     <section class="content">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="box-white">
-                                <img class="img-full" src="images/blog/blog1.jpg" alt="">
-                                <div class="article">
-                                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-                                    <h6><i class="fa fa-user"></i> Jhon</h6>
-                                    <h6 class="pl-7"><i class="fa fa-folder"></i> Bootstrap</h6>
-                                    <h6 class="pl-7"><i class="fa fa-calendar"></i> Sept 16th, 2012</h6>
-                                    <h6 class="pl-7"><i class="fa fa-comment"></i> 3 Comments</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta assumenda, sint accusantium distinctio ratione ducimus nihil sunt a! Molestias iure dolore iusto labore, amet dolor, assumenda ducimus tenetur dolorem dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus optio sunt obcaecati adipisci ipsum dicta minus nesciunt neque officia quo deleniti magni voluptas delectus dolor dolorum ab, iure qui eaque!</p>
-                                    <button type="button" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></button>
-                                </div>
-                            </div>
-                            <div class="box-white mt-2">
-                                <img class="img-full" src="images/blog/blog2.jpg" alt="">
-                                <div class="article">
-                                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-                                    <h6><i class="fa fa-user"></i> Jhon</h6>
-                                    <h6 class="pl-7"><i class="fa fa-folder"></i> Bootstrap</h6>
-                                    <h6 class="pl-7"><i class="fa fa-calendar"></i> Sept 16th, 2012</h6>
-                                    <h6 class="pl-7"><i class="fa fa-comment"></i> 0 Comments</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta assumenda, sint accusantium distinctio ratione ducimus nihil sunt a! Molestias iure dolore iusto labore, amet dolor, assumenda ducimus tenetur dolorem dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus optio sunt obcaecati adipisci ipsum dicta minus nesciunt neque officia quo deleniti magni voluptas delectus dolor dolorum ab, iure qui eaque!</p>
-                                    <button type="button" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-sm-push-8">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="input-group">
@@ -174,6 +144,38 @@
                     </div>
                     <h3>Facebook fanpage</h3>
                 </div>
+                <div class="col-sm-8 col-sm-pull-4">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="box-white">
+                                <img class="img-full" src="images/blog/blog1.jpg" alt="">
+                                <div class="article">
+                                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                                    <h6><i class="fa fa-user"></i> Jhon</h6>
+                                    <h6 class="pl-7"><i class="fa fa-folder"></i> Bootstrap</h6>
+                                    <h6 class="pl-7"><i class="fa fa-calendar"></i> Sept 16th, 2012</h6>
+                                    <h6 class="pl-7"><i class="fa fa-comment"></i> 3 Comments</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta assumenda, sint accusantium distinctio ratione ducimus nihil sunt a! Molestias iure dolore iusto labore, amet dolor, assumenda ducimus tenetur dolorem dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus optio sunt obcaecati adipisci ipsum dicta minus nesciunt neque officia quo deleniti magni voluptas delectus dolor dolorum ab, iure qui eaque!</p>
+                                    <button type="button" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></button>
+                                </div>
+                            </div>
+                            <div class="box-white mt-2">
+                                <img class="img-full" src="images/blog/blog2.jpg" alt="">
+                                <div class="article">
+                                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                                    <h6><i class="fa fa-user"></i> Jhon</h6>
+                                    <h6 class="pl-7"><i class="fa fa-folder"></i> Bootstrap</h6>
+                                    <h6 class="pl-7"><i class="fa fa-calendar"></i> Sept 16th, 2012</h6>
+                                    <h6 class="pl-7"><i class="fa fa-comment"></i> 0 Comments</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta assumenda, sint accusantium distinctio ratione ducimus nihil sunt a! Molestias iure dolore iusto labore, amet dolor, assumenda ducimus tenetur dolorem dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus optio sunt obcaecati adipisci ipsum dicta minus nesciunt neque officia quo deleniti magni voluptas delectus dolor dolorum ab, iure qui eaque!</p>
+                                    <button type="button" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                
             </div>
             <nav>
               <ul class="pagination">
