Hover redes sociales en about us, blog-item2

--- a/blog.html
+++ b/blog.html
@@ -156,7 +156,7 @@
                                     <h6 class="pl-7"><i class="fa fa-calendar"></i> Sept 16th, 2012</h6>
                                     <h6 class="pl-7"><i class="fa fa-comment"></i> 3 Comments</h6>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta assumenda, sint accusantium distinctio ratione ducimus nihil sunt a! Molestias iure dolore iusto labore, amet dolor, assumenda ducimus tenetur dolorem dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus optio sunt obcaecati adipisci ipsum dicta minus nesciunt neque officia quo deleniti magni voluptas delectus dolor dolorum ab, iure qui eaque!</p>
-                                    <button type="button" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></button>
+                                    <a href="blog-item2.html"  class="btn btn-default">Read More <i class="fa fa-angle-right"></i></a>
                                 </div>
                             </div>
                             <div class="box-white mt-2">
@@ -168,7 +168,7 @@
                                     <h6 class="pl-7"><i class="fa fa-calendar"></i> Sept 16th, 2012</h6>
                                     <h6 class="pl-7"><i class="fa fa-comment"></i> 0 Comments</h6>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta assumenda, sint accusantium distinctio ratione ducimus nihil sunt a! Molestias iure dolore iusto labore, amet dolor, assumenda ducimus tenetur dolorem dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus optio sunt obcaecati adipisci ipsum dicta minus nesciunt neque officia quo deleniti magni voluptas delectus dolor dolorum ab, iure qui eaque!</p>
-                                    <button type="button" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></button>
+                                    <a href="blog-item.html" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -294,9 +294,9 @@
 
     <div class="col-md-3">
         <h3>Address</h3>
-        <br>
-        <h5>Twitter, Inc</h5>
+        <h5><strong>Twitter, Inc</strong></h5>
         <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+        <p>P: (123) 456-7890</p>
         <div class="go">
             <h3>Newsletter</h3>
             <div class="input-group">
