--- a/about-us.html
+++ b/about-us.html
@@ -328,9 +328,9 @@
 
     <div class="col-md-3">
         <h3>Address</h3>
-        <br>
-        <h5>Twitter, Inc</h5>
+        <h5><strong>Twitter, Inc</strong></h5>
         <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+        <p>P: (123) 456-7890</p>
         <div class="go">
             <h3>Newsletter</h3>
             <div class="input-group">
