Arreglando hover en menu en about us

--- a/about-us.html
+++ b/about-us.html
@@ -144,7 +144,7 @@
                         </div>
                     </a>
                     <a href="">
-                        <div class="box in">
+                        <div class="box lin">
                             <i class="fa fa-linkedin"></i>
                         </div>
                     </a>                    
@@ -170,7 +170,7 @@
                         </div>
                     </a>
                     <a href="">
-                        <div class="box in">
+                        <div class="box lin">
                             <i class="fa fa-linkedin"></i>
                         </div>
                     </a>                    
@@ -196,7 +196,7 @@
                         </div>
                     </a>
                     <a href="">
-                        <div class="box in">
+                        <div class="box lin">
                             <i class="fa fa-linkedin"></i>
                         </div>
                     </a>                    
@@ -222,7 +222,7 @@
                         </div>
                     </a>
                     <a href="">
-                        <div class="box in">
+                        <div class="box lin">
                             <i class="fa fa-linkedin"></i>
                         </div>
                     </a>                    
